Update cheatsheets: Java, Databases, Kubernetes